atualizando o arquivo com as tags de html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-<!-- tag de comentário no <!DOCTYPE html>
+<!DOCTYPE html>
+<!-- tag de comentário
 
 git init #inicia o git
+git remote add origin https://github.com/diegogotex/diegogotex.github.io.git
 git add . #marca os arquivos pra adicionar no repositório
 git status #fala como tá a situação
 git commit -m "Arquivos iniciais" #da o commit
 git push origin master #envia tudo para o repositório
 
+#pra atualizar
+add .
+git commit -m "comment"
+git push origin master
 
 -->
-
+<html>
 <body>
   <h1>The Brown Bear</h1>
   <div id="introduction">
@@ -46,3 +52,4 @@ git push origin master #envia tudo para o repositório
 
   </div>
 </body>
+</html>
