--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ git commit -m "Arquivos iniciais" #da o commit
 git push origin master #envia tudo para o repositório
 
 #pra atualizar
-add .
+git add .
 git commit -m "comment"
 git push origin master
 
@@ -45,9 +45,6 @@ git push origin master
     <h2>Media</h2>
       <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" alt="A Brown Bear"/>
 
-    <video src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4" width = "320" height = "240" controls>
-      Video not supported
-      </video>
 
 
   </div>
